# cmake_learning

MFCC/: CMakeLists.txt  main.cpp
MFCC/include/: mfcc.hpp  sas_util.h
MFCC/wavreader/: main  main.cpp  wav-self.txt  wavreader.hpp
exp3/: CMakeLists.txt
exp3/include/gist/: Gist.h
exp3/include/static/: Hello.h
exp3/src/: Hello.cpp  main.cpp
